style.css
/*
 Theme Name:   Zerius
 Description:  Zerius is a clean, modern, and animated free one-page parallax WordPress theme.
 Author:       Themeisle
 Author URI:   https://themeisle.com
 Template:     zerif-lite
 Version:      1.0.8
 License:      GNU General Public License version 2
 License URI:  license.txt
 Text Domain:  zerius
 Tags:          black, gray, red, white, one-column, two-columns, right-sidebar, responsive-layout, custom-background, custom-menu, editor-style, featured-images, threaded-comments, translation-ready
*/


/*--------------------------------------------------------------
General
--------------------------------------------------------------*/

.entry-content a {
	color: #fc5f45;
}
.entry-content a:visited {
	color: #fc5f45;
}
.entry-content a:hover {
	color: #ea4747;
}
pre {
	font-size: 1rem;
}

/*--------------------------------------------------------------
Header
--------------------------------------------------------------*/

.navbar {
	background: rgba(31,33,36, 0.9) !important;
}
.navbar-inverse .navbar-nav ul.sub-menu {
	background: rgba(31,33,36, 1) !important;
}

#main-nav{
	border-bottom: 3px solid #FC5F45 !important;
}
.navbar-right-search{
	float: right !important;
	background: url('images/search.png') no-repeat;
	height: 22px;
	margin-top: 30px;
	padding-left: 20px;
	margin-left: 20px;
	cursor:pointer;
	margin-right: 5px;
}
.header-search{
	background: #FC5F45;
	position: absolute;
	width: 100%;
	text-align:center !important;
}
.search-field{
	width: 550px;
	border-radius: 4px !important;
	height: 31px !important;
	padding-top: 1px !important;
	border: 1px solid #cf4f3a !important;
}
.header-search-submit{
	background: #2E3037 !important;
	color: #fff !important;
	padding: 8px 30px !important;
	font-family: 'Titillium Web', sans-serif;
}
.header-search-submit:hover{
	background: #404040 !important;	
}
.navbar-inverse .navbar-nav > li > a,
.navbar-inverse .main-navigation > ul > li > a {
	padding: 0px 15px !important;
	color: #919495 !important;
	border-radius: 4px !important;
	margin-right: 5px !important;
	text-transform: uppercase !important;
	font-weight: bold;
	font-size: 16px;
}
.focus {
	background: #fff url("images/shattered.png") !important; 
	color: #c0cdcf !important;
}
.focus h5 {
	color: #454545 !important;
}
.focus h6 {
	color: #858585 !important;
}
.navbar-inverse .navbar-nav ul.sub-menu li {
	float: left;
	width: 100%;
}
.navbar-inverse .navbar-nav ul.sub-menu li a {
	padding: 0px 0 !important;
	color: white !important;
	width: 100%;
	float: left;
}
.navbar-inverse .navbar-nav ul.sub-menu li:hover {
	background: rgba(255,255,255, 0.1);
}
.navbar-inverse .navbar-nav ul.sub-menu li:hover > a {
	padding: 0px 10px !important;
	color: white !important;
}
.navbar-inverse .navbar-nav > li:hover > a {
	padding: 0px 15px !important;
	color: white !important;
}
.nav li a.nav-active {
	color: #fc5f45 !important;
}
.nav li a.nav-active:before {
	background: #fc5f45 !important;
}
.header {
	min-height: 0;
}
.header {
	background: rgba(51,67,70, 0.5) !important;
}
.intro-text {
	color: #FFF !important;
}

/*--------------------------------------------------------------
Content
--------------------------------------------------------------*/
.dark-text {
	color: #2e3037 !important;
}
h2.white-text {
	color: #fff !important;
}
.works {
	background: #f5f5f5 !important;
}
.about-us {
	background: #2e3037 !important;
	color: #c0cdcf !important;
}
.red-btn {
	border-radius: 5px;
	border-width: 2px;
	border-style: solid;
	border-color: #fc5f45 !important;
	position: relative;
	background: rgba(252,95,69, 0.8) !important;
	font-family: 'Titillium Web', sans-serif;
}
.red-btn:hover {
    border-width: 2px;
	border-style: solid;
    border-color: #fc5f45 !important;
    background: #fc5f45 !important;
}
.green-btn {
	border-radius: 5px;
    border-width: 2px;
	border-style: solid;
    border-color: #98A0A2;
    position: relative;
    background: rgba(145,148,149,0.8) !important;
}
.green-btn:hover {
    border-width: 2px;
	border-style: solid;
    border-color: rgba(100,100,100, 1) !important;
    background: rgba(100,100,100,0.8) !important;

}
.comment-form #submit, .comment-reply-link,.submit{
	color: #fff !important;
	border-radius: 1px;
	border-width: 2px;
	position: relative;
	background: black !important;
}
.intro-text {	
	padding: 15px 0;
}
.testimonial {
	background: #fc5f45 !important;
}
.feedback-box .message {
	color: #334346 !important;
	font-family: 'Titillium Web', sans-serif;
}
.our-team {
	background: #fff url("images/agsquare.png") !important; 
}
.textarea-box {
	border-radius: 0;
}
body{
	background: #fdfdfd;
}
.entry-title:before {
	content: "";
	background: #fc5f45 !important;
}
.entry-title a:hover{
	color: #ea4747 !important;
}
.entry-title, 
.entry-title a, 
.widget-title, 
.widget-title a {
	color: #334346;
}
.widget .widget-title:before {
	content: "";
	background: #fc5f45 !important;
}
.section-header h2{
	text-transform: capitalize !important;
}
.section-header h6{
	color: #919495 !important;
}
.logged-in-as a {

	color: #fc5f45 !important;
}
.fn a {

	color: #fc5f45 !important;
}
body, button, input, select, textarea {
	color: #1f2124 !important;
}

/* Selection colours (easy to forget) */
::selection {
	background: #2e3037 !important;
	color: #FFF !important;
}
.skill input{
	color: #fff !important;
}
::-moz-selection {
	background: #fc5f45 !important;
	color: #fff !important;
}
.testimonial h2 {
	color: #FFF !important;
}
#client-feedbacks .feedback-box {
	border-radius: 1px;
}
.input-box {
	border-radius: 1px;
	background: rgba(255,255,255, 1) !important;
}
.textarea-box {
	border-radius: 1px;
	background: rgba(255,255,255, 1) !important;
}
.newsletter {
	background: #fc5f45 !important;
	color: white !important;
}
.newsletter h3 {
	text-transform: capitalize;
	color: white !important;
}
.separator-one {
	background: rgba(46, 48, 55, 0.9) !important;
}
/* ... */

